Updated for z scores

--- a/Regression.html
+++ b/Regression.html
@@ -14,7 +14,7 @@
 
 <title>Regression</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
@@ -292,6 +292,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Z_Test.html">One Sample z test</a>
+    </li>
+    <li>
       <a href="Independent_t-test.html">Independent t-test</a>
     </li>
     <li>
@@ -378,8 +381,7 @@ album\;sales = 50 + (100 \times 5)
 ## (Intercept) 1.341e+02  7.537e+00  17.799   &lt;2e-16 ***
 ## Adverts     9.612e-02  9.632e-03   9.979   &lt;2e-16 ***
 ## ---
-## Signif. codes:  
-## 0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
 ## Residual standard error: 65.99 on 198 degrees of freedom
 ## Multiple R-squared:  0.3346, Adjusted R-squared:  0.3313 
