--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <title>Understanding Statistics using R Studio</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -292,6 +292,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Z_Test.html">One Sample z test</a>
+    </li>
+    <li>
       <a href="Independent_t-test.html">Independent t-test</a>
     </li>
     <li>
@@ -345,12 +348,16 @@ $(document).ready(function () {
 <li>Salkind, N. J. &amp; Shaw, L. A. (2019). <em>Statistics for people who (think they) hate statistics using R.</em> Sage.</li>
 <li>Pagano, R. R. (2012). <em>Understanding Statistics in the behavioral sciences</em> (10th ed.). Cengage.</li>
 </ul>
-<p>The site contains several examples of the types of things you need to know to perform calculations using R Studio. R Studio uses “R” to perform statistical calculations (and all kinds of others!) with a few extras helps for working with various data sets.</p>
-<p>You need two programs to use R Studio</p>
-<ol style="list-style-type: decimal">
-<li>R - the most current version - <a href="https://cran.r-project.org/" class="uri">https://cran.r-project.org/</a></li>
-<li>R Studio - a program that supports using R - <a href="https://rstudio.com/products/rstudio/download/" class="uri">https://rstudio.com/products/rstudio/download/</a></li>
-</ol>
+<p>This site contains several examples of the types of things you need to know to perform calculations using R Studio. R Studio uses “R” to perform statistical calculations (and all kinds of others!) with a few extras helps for working with various data sets.</p>
+<p>There are a few different ways to install and use the programs.</p>
+<p><strong>Install both on your laptop</strong></p>
+<p>R - the most current version - <a href="https://cran.r-project.org/" class="uri">https://cran.r-project.org/</a> 1. Click the link and then select your operating system. 2. A) For Mac download the link labeled <em>R-4.1.1.pkg</em> 2. B) For Windows click the link that says <em>base</em>, Then click "Download R 4.1.1 for Windows</p>
+<p>R Studio - a program that supports using R - <a href="https://rstudio.com/products/rstudio/download/" class="uri">https://rstudio.com/products/rstudio/download/</a> 1. Click on the Link and then scroll down 2. Choose R Studio Desktop, which will say FREE under it. 3. The Website should detect your operating system and then you just press the download button. 3. A) Or you can look through the the installers by scrolling down and select your operating system.</p>
+<p><strong>Use R Studio from the Cloud</strong></p>
+<p>The easiest way to use R Studio is to use the cloud version that you can run in your internet browser (Safari, Chrome, etc.) If you don’t want to download the program or have difficulty installing it go to this website and sign up for the “Cloud Free” plan.</p>
+<p><a href="https://rstudio.cloud/plans/free" class="uri">https://rstudio.cloud/plans/free</a></p>
+<p>This is a great way to get started and gives you everything you need for the course.</p>
+<p>If you have any problems installing the program, please use the cloud version, it’s easy to use and a great way to get started.</p>
 <p>R is the programming language that builds databases and analyzes statistics, R Studio is the program we use to get the most out of R and add several different tools that make R easier to use.</p>
 <div id="heres-some-more-videos-that-may-be-useful" class="section level3">
 <h3>Here’s some more videos that may be useful</h3>
