--- a/Building_databases.html
+++ b/Building_databases.html
@@ -14,7 +14,7 @@
 
 <title>Building databases</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -295,6 +295,9 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Z_Test.html">One Sample z test</a>
+    </li>
     <li>
       <a href="Independent_t-test.html">Independent t-test</a>
     </li>
