--- a/Correlation.html
+++ b/Correlation.html
@@ -14,7 +14,7 @@
 
 <title>Correlation</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -296,6 +296,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Z_Test.html">One Sample z test</a>
+    </li>
+    <li>
       <a href="Independent_t-test.html">Independent t-test</a>
     </li>
     <li>
@@ -354,7 +357,7 @@ r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{
 <p>Correlation only describes relationships between variables not <em>causal</em> relationships between variables. It’s not possible to decipher which variable is doing the causal work or which variable is the independent variable and which is the dependent variable. However, correlation can still provide helpful information about variables and we can still use them to test certain types of hypotheses.</p>
 <p>To explore correlation futher, let’s look at a particular dataset. Open the dataset labeled album_sakes.csv. Use the <em>Import Dataset</em> command in the upper righthand window and let’s look at the data set.</p>
 <pre class="r"><code>head(Album_Sales)</code></pre>
-<pre><code>## # A tibble: 6 x 4
+<pre><code>## # A tibble: 6 × 4
 ##   Adverts Sales Airplay Image
 ##     &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;
 ## 1    10.3   330      43    10
