--- a/Independent_t-test.html
+++ b/Independent_t-test.html
@@ -14,7 +14,7 @@
 
 <title>Independent t test</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -296,6 +296,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Z_Test.html">One Sample z test</a>
+    </li>
+    <li>
       <a href="Independent_t-test.html">Independent t-test</a>
     </li>
     <li>
@@ -340,9 +343,26 @@ $(document).ready(function () {
   addClassKlippyTo("pre.r, pre.markdown");
   addKlippy('left', 'top', 'auto', '1', 'Copy code', 'Copied!');
 </script>
-<p>The independent t test is used when analyzing the difference in means between two separate groups. Typically, this is used to analyze the difference between the control group (group who did not recieve the independent variable) and the experimental group (group who did receive the independent variable).</p>
+<p>Resources to consult Chapter 10 from Field, A. (2017). Discovering Statistics Using IBM SPSS Statistics (5th Edition). SAGE Publications, Ltd. (UK).</p>
+<p>Section from <a href="https://learningstatisticswithr.com/book/ttest.html#studentttest">Learning Statistics with R</a></p>
+<p>The independent t test is used when analyzing the difference in means between two separate groups. Typically, this is used to analyze the difference between the control group (group who did not receive the independent variable) and the experimental group (group who did receive the independent variable).</p>
 <p>The null hypothesis assumes that the mean difference between the two groups is equal to zero. If the samples came from the same population, their means would be roughly the same and if they came from the same population their characteristics would be the same as well. Thus, the null hypothesis assumes no real differences based on the presence of the independent variable.</p>
-<p>Independent t-test example</p>
+<p>This type of design is sometimes referred as a <em>between-groups</em> or <em>independent</em> design. It requires a categorical (nominal) predictor or independent variable that will specify the two groups (experimental and control) and a continuous dependent variable that specifies the outcome.</p>
+<p>There are two possible reasons why two samples have different means.</p>
+<ol style="list-style-type: decimal">
+<li>The two sample means come from the same population, but the existence of measurement error and variability are the reason they are different. (Null hypothesis)</li>
+<li>The two sample means come from different populations, which have different characteristics, and reflect a genuine difference between the sample means. (Alternative hypothesis)</li>
+</ol>
+<p>The t test is related to the z test, except that we are analyzing t scores rather than z scores. Remember the formula for a z score. <span class="math display">\[
+z = \frac{x - \mu}{\frac{\sigma}{\sqrt{n}}}
+\]</span> So for the t test, we use a verion of the z test but compare the following: <span class="math display">\[
+t = \frac{(observed \;difference\;between\;means) - (expected\; difference\; between\;means)}{estimate\; of\; the\; \;standard\; error\; of\; the\; differnce\; \\between\; two\; sample\; means}
+\]</span> Remember that the null hypothesis assumes that the expected difference between the means is equal to zero. So the numerator will simply be the difference between the two sample means <span class="math inline">\(x_{1}-x_{2}\)</span>. The z test uses the standard deviation from the sample as an estimate of the error divided by the square root of n. The t distruiotn is slightly different. Instead, it uses the standard deviation from the <strong>sample</strong> as an estimate fo the standard error. However we need estimates from both sample 1 and sample 2 so the equation looks like this: <span class="math display">\[
+\sqrt{\frac{s^{2}_{1}}{n_{1}}+\frac{s^{2}_{2}}{n_{2}} }
+\]</span> This becomes the denominator of the independent t test formula, so we put it all together like this: <span class="math display">\[
+t = \frac{x_{1}-x_{2}}{\sqrt{\frac{s^{2}_{1}}{n_{1}}+\frac{s^{2}_{2}}{n_{2}} }}
+\]</span></p>
+<p>##Independent t-test example</p>
 <ol style="list-style-type: decimal">
 <li>First Step, upload dataset from SPSS</li>
 <li>Get data set named “Invisibility” from SPSS datasets</li>
@@ -353,8 +373,20 @@ $(document).ready(function () {
 Invisibility &lt;- read_sav(&quot;Invisibility.sav&quot;)
 View(Invisibility)</code></pre>
 <p>Inspect variables</p>
-<pre class="r"><code>Invisibility$Cloak
-Invisibility$Mischief</code></pre>
+<pre class="r"><code>Invisibility$Cloak</code></pre>
+<pre><code>## &lt;labelled&lt;double&gt;[24]&gt;: Cloak of invisibility
+##  [1] 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1
+## 
+## Labels:
+##  value    label
+##      0 No Cloak
+##      1    Cloak</code></pre>
+<pre class="r"><code>Invisibility$Mischief</code></pre>
+<pre><code>##  [1] 3 1 5 4 6 4 6 2 0 5 4 5 4 3 6 6 8 5 5 4 2 5 7 5
+## attr(,&quot;label&quot;)
+## [1] &quot;Mischievous Acts&quot;
+## attr(,&quot;format.spss&quot;)
+## [1] &quot;F8.0&quot;</code></pre>
 <p>Create bar graph to examine data First step is to create a dataset with your descriptive variables We’ll use the dplyr package to do this, which is part of tidyverse</p>
 <pre class="r"><code>library(dplyr)
 Invis_Descriptives &lt;- Invisibility %&gt;%
@@ -363,20 +395,28 @@ Invis_Descriptives &lt;- Invisibility %&gt;%
             mean = mean(Mischief),
             sd = sd(Mischief),
             se = sd / sqrt(n),
-            ci = qt(0.975, df = n - 1) * sd / sqrt(n))</code></pre>
+            ci = qt(0.975, df = n - 1) * sd / sqrt(n))
+Invis_Descriptives</code></pre>
+<pre><code>## # A tibble: 2 × 6
+##          Cloak     n  mean    sd    se    ci
+##      &lt;dbl+lbl&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+## 1 0 [No Cloak]    12  3.75  1.91 0.552  1.22
+## 2 1 [Cloak]       12  5     1.65 0.477  1.05</code></pre>
 <p>First let’s make a simple graph with just the basics</p>
 <pre class="r"><code>ggplot(Invis_Descriptives, 
        aes(x = Cloak, 
            y = mean)) +
   geom_bar(stat = &quot;identity&quot;)</code></pre>
-<p>Next let’s add error bars</p>
+<pre><code>## Don&#39;t know how to automatically pick scale for object of type haven_labelled/vctrs_vctr/double. Defaulting to continuous.</code></pre>
+<p><img src="Independent_t-test_files/figure-html/unnamed-chunk-4-1.png" width="672" /> Next let’s add error bars</p>
 <pre class="r"><code>ggplot(Invis_Descriptives, 
        aes(x = Cloak, 
            y = mean)) +
   geom_bar(stat = &quot;identity&quot;) +
   geom_errorbar(aes(ymin=mean-ci,
                     ymax=mean+ci))</code></pre>
-<p>We can add in labels to improve the look of our chart. We’ve added labels to our factor variable and labels for the title and x and y variables.</p>
+<pre><code>## Don&#39;t know how to automatically pick scale for object of type haven_labelled/vctrs_vctr/double. Defaulting to continuous.</code></pre>
+<p><img src="Independent_t-test_files/figure-html/unnamed-chunk-5-1.png" width="672" /> We can add in labels to improve the look of our chart. We’ve added labels to our factor variable and labels for the title and x and y variables.</p>
 <pre class="r"><code>ggplot(Invis_Descriptives, 
        aes(x = factor(Cloak, labels=c(&quot;No Cloak&quot;, &quot;Cloak&quot;)),
            y = mean)) +
@@ -385,7 +425,7 @@ Invis_Descriptives &lt;- Invisibility %&gt;%
                     ymax=mean+ci)) +
   labs(title = &quot;Mean Number of Mischievious Acts with or without Cloak&quot;, 
        y=&quot;Mean Number of Mischievious Acts&quot;, x=&quot;Were They Wearing a Cloak?&quot;)</code></pre>
-<p>Next let’s add some color to our chart</p>
+<p><img src="Independent_t-test_files/figure-html/unnamed-chunk-6-1.png" width="672" /> Next let’s add some color to our chart</p>
 <pre class="r"><code>ggplot(Invis_Descriptives, 
        aes(x = factor(Cloak, labels=c(&quot;No Cloak&quot;, &quot;Cloak&quot;)),
            y = mean)) +
@@ -395,10 +435,23 @@ Invis_Descriptives &lt;- Invisibility %&gt;%
                     ymax=mean+ci), width=.3, size=1) +
   labs(title = &quot;Mean Number of Mischievious Acts with or without Cloak&quot;, 
        y=&quot;Mean Number of Mischievious Acts&quot;, x=&quot;Were They Wearing a Cloak?&quot;)</code></pre>
-<p>Based on the graph, it looks like there is a difference between the groups Let’s run a t test to make sure</p>
+<p><img src="Independent_t-test_files/figure-html/unnamed-chunk-7-1.png" width="672" /> Based on the graph, it looks like there is a difference between the groups Let’s run a t test to make sure</p>
 <pre class="r"><code>t.test(Mischief ~ Cloak, data = Invisibility)</code></pre>
+<pre><code>## 
+##  Welch Two Sample t-test
+## 
+## data:  Mischief by Cloak
+## t = -1.7135, df = 21.541, p-value = 0.101
+## alternative hypothesis: true difference in means between group 0 and group 1 is not equal to 0
+## 95 percent confidence interval:
+##  -2.764798  0.264798
+## sample estimates:
+## mean in group 0 mean in group 1 
+##            3.75            5.00</code></pre>
 <p>List the effect size as well Cohen’s d - Subtract the means from each other and divide by the standard deviation of the control group</p>
-<pre class="r"><code>Cohens_d &lt;- (5.00-3.75)/1.91</code></pre>
+<pre class="r"><code>Cohens_d &lt;- (5.00-3.75)/1.91
+Cohens_d</code></pre>
+<pre><code>## [1] 0.6544503</code></pre>
 <p>Write out conclusion</p>
 <p><em>On average, participants given a cloak of invisibility engaged in more acts of mischief (M = 5, SE = 0.48), than those not given a cloak (M = 3.75, SE = 0.55). This difference, 1.25, 95% CI[-2.76, 0.26], was not significant t(21.54) = −1.71, p = 0.101; however, it did represent a medium-sized effect d = 0.65.</em></p>
 <p>Steps to writing results</p>
