--- a/Correlation.html
+++ b/Correlation.html
@@ -428,7 +428,7 @@ r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{
 ##  Pearson&#39;s product-moment correlation
 ## 
 ## data:  Album_Sales$Sales and Album_Sales$Airplay
-## t = 10.524, df = 198, p-value &lt; 2.2e-16
+## t = 10.524, df = 198, p-value &lt; 0.00000000000000022
 ## alternative hypothesis: true correlation is not equal to 0
 ## 95 percent confidence interval:
 ##  0.5018814 0.6810668
