--- a/Intro_ggplot.html
+++ b/Intro_ggplot.html
@@ -358,19 +358,19 @@ $(document).ready(function () {
 <p>We’ll start off by using a dataset called “mpg” It should have loaded with the tidyverse package. Just type it in to find it</p>
 <pre class="r"><code>mpg</code></pre>
 <pre><code>## # A tibble: 234 × 11
-##    manufacturer model   displ  year   cyl trans  drv     cty   hwy fl    class
-##    &lt;chr&gt;        &lt;chr&gt;   &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;  &lt;chr&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;chr&gt;
-##  1 audi         a4        1.8  1999     4 auto(… f        18    29 p     comp…
-##  2 audi         a4        1.8  1999     4 manua… f        21    29 p     comp…
-##  3 audi         a4        2    2008     4 manua… f        20    31 p     comp…
-##  4 audi         a4        2    2008     4 auto(… f        21    30 p     comp…
-##  5 audi         a4        2.8  1999     6 auto(… f        16    26 p     comp…
-##  6 audi         a4        2.8  1999     6 manua… f        18    26 p     comp…
-##  7 audi         a4        3.1  2008     6 auto(… f        18    27 p     comp…
-##  8 audi         a4 qua…   1.8  1999     4 manua… 4        18    26 p     comp…
-##  9 audi         a4 qua…   1.8  1999     4 auto(… 4        16    25 p     comp…
-## 10 audi         a4 qua…   2    2008     4 manua… 4        20    28 p     comp…
-## # … with 224 more rows</code></pre>
+##    manufacturer model      displ  year   cyl trans drv     cty   hwy fl   
+##    &lt;chr&gt;        &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
+##  1 audi         a4           1.8  1999     4 auto… f        18    29 p    
+##  2 audi         a4           1.8  1999     4 manu… f        21    29 p    
+##  3 audi         a4           2    2008     4 manu… f        20    31 p    
+##  4 audi         a4           2    2008     4 auto… f        21    30 p    
+##  5 audi         a4           2.8  1999     6 auto… f        16    26 p    
+##  6 audi         a4           2.8  1999     6 manu… f        18    26 p    
+##  7 audi         a4           3.1  2008     6 auto… f        18    27 p    
+##  8 audi         a4 quattro   1.8  1999     4 manu… 4        18    26 p    
+##  9 audi         a4 quattro   1.8  1999     4 auto… 4        16    25 p    
+## 10 audi         a4 quattro   2    2008     4 manu… 4        20    28 p    
+## # … with 224 more rows, and 1 more variable: class &lt;chr&gt;</code></pre>
 <p>It shows the dataset as a “tibble”, which just means table in the tidyverse</p>
 <p>You can also view it as a regular dataset</p>
 <pre class="r"><code>View(mpg)</code></pre>
