--- a/Regression.html
+++ b/Regression.html
@@ -17,7 +17,7 @@
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -33,6 +33,10 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<script src="site_libs/clipboard-1.7.1/clipboard.min.js"></script>
+<link href="site_libs/primer-tooltips-1.4.0/build.css" rel="stylesheet" />
+<link href="site_libs/klippy-0.0.0.9500/css/klippy.min.css" rel="stylesheet" />
+<script src="site_libs/klippy-0.0.0.9500/js/klippy.min.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -335,12 +339,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>Regression</p>
+<script>
+  addClassKlippyTo("pre.r, pre.markdown");
+  addKlippy('left', 'top', 'auto', '1', 'Copy code', 'Copied!');
+</script>
+<div id="regression" class="section level4">
+<h4>Regression</h4>
 <p>Understanding Linear regression.</p>
-<p>As we saw with correlation, one way we can understand a relationship is thorugh using a line as a model. Lines require two points and when using a scatterplot, based on the slope, an estimate of the strength of the relationship between two variables can be assessed. Linear regression adds more tools to understand the relationship between two variables.</p>
+<p>As we saw with correlation, one way we can understand a relationship is through using a line as a model. Lines require two points and when using a scatterplot, based on the slope, an estimate of the strength of the relationship between two variables can be assessed. Linear regression adds more tools to understand the relationship between two variables.</p>
 <p>Let’s start with the basic equation for a line. <span class="math display">\[
 Y=b_0 + b_1X
-\]</span> <span class="math inline">\(b_1\)</span> tells us the shape of the model, basically whether it’s positive or negative, just like we saw with correlational coefficients earlier. <span class="math inline">\(b_0\)</span> stands for our Y intercept or where the line crosses the Y axis. So theses two values essentially stand in for our two points on a line. One indicates the point on the Y axis where the line crosses the Y axis and the other one describes the slope of the line (either positive or negative) and the degree of the slope of the line.</p>
+\]</span> <span class="math inline">\(b_1\)</span> tells us the shape of the model, basically whether it’s positive or negative, just like we saw with correlational coefficients earlier. <span class="math inline">\(b_0\)</span> stands for our Y intercept or where the line crosses the Y axis. So these two values essentially stand in for our two points on a line. One indicates the point on the Y axis where the line crosses the Y axis and the other one describes the slope of the line (either positive or negative) and the degree of the slope of the line.</p>
 <p>One thing that regression lines enable is the prediction of one variable (the outcome variable or dependent variables) based on another (predictor variable or independent variable). This is a form of simple regression. If you are using more than one variable or several predictors to predict an outcome variable, this is known as multiple regression.</p>
 <p>For example, going back to our Album Sales dataset. If we wanted to predict album sales (Y)(outcome variable) based on our advertising budget (X)(predictor variable) and the regression model had 50 as the constant and 100 as the gradient, the formula would look like this: <span class="math display">\[
 album\;sales = b_0 + b_1(advertising\;budget)
@@ -363,9 +372,9 @@ album\;sales = 50 + (100 \times 5)
 ## Coefficients:
 ## (Intercept)      Adverts  
 ##   134.13994      0.09612</code></pre>
-<p>Notice that when the object is called up it provides the intercept and gradient discussed earlier. Thus we can plug these numbers into our formula using R and find the predicted album sales based on spending 5 dollars on the advertising budget.</p>
-<pre class="r"><code>134.14 + (.096*5)</code></pre>
-<pre><code>## [1] 134.62</code></pre>
+<p>Notice that when the object is called up it provides the intercept and gradient discussed earlier. Thus we can plug these numbers into our formula using R and find the predicted album sales based on spending 500 dollars on the advertising budget.</p>
+<pre class="r"><code>134.14 + (.096*500)</code></pre>
+<pre><code>## [1] 182.14</code></pre>
 <p>The two coefficent have been identified, but we still don’t know if advertising is a <em>good</em> predictor of album sales. However, this information is also in the results that were saved in the object “regression”. To look at these results, the summary command is used.</p>
 <pre class="r"><code>summary(regression)</code></pre>
 <pre><code>## 
@@ -377,24 +386,35 @@ album\;sales = 50 + (100 \times 5)
 ## -152.949  -43.796   -0.393   37.040  211.866 
 ## 
 ## Coefficients:
-##               Estimate Std. Error t value            Pr(&gt;|t|)    
-## (Intercept) 134.139938   7.536575  17.799 &lt;0.0000000000000002 ***
-## Adverts       0.096124   0.009632   9.979 &lt;0.0000000000000002 ***
+##              Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept) 1.341e+02  7.537e+00  17.799   &lt;2e-16 ***
+## Adverts     9.612e-02  9.632e-03   9.979   &lt;2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
 ## Residual standard error: 65.99 on 198 degrees of freedom
 ## Multiple R-squared:  0.3346, Adjusted R-squared:  0.3313 
-## F-statistic: 99.59 on 1 and 198 DF,  p-value: &lt; 0.00000000000000022</code></pre>
-<p>Remember that the variable of interest, the predictor variable, was advertising. If we worked at this record company we would be interested if mondy spendt on advertising would help in increasing record sales. The first thing to notice is the F statistic, which analyzes whether the regression model is signficant or not. Notice that this number is 99.59 with a p value well below .05, so that tells us our regression model is a good one.</p>
+## F-statistic: 99.59 on 1 and 198 DF,  p-value: &lt; 2.2e-16</code></pre>
+<p>Remember that the variable of interest, the predictor variable, was advertising. If we worked at this record company we would be interested if money spent on advertising would help in increasing record sales. The first thing to notice is the F statistic, which analyzes whether the regression model is signficant or not. Notice that this number is 99.59 with a p value well below .05, so that tells us our regression model is a good one.</p>
 <p>Where did this statistics analysis come from though? To answer this question we need to look at little bit closer at how to analyze the fit of a line.</p>
 <p>From the discussion of correlation, you may remember that a regression line is a line that is used to fit the data as well as possible, but as with all statistics there is a certain amount of error. The regression line does not cross all the points on a scatterdot, but tries to be as close to as many points as possible. The difference between the line and a particular point is known as a <em>residual</em>. A residual is similar to a deviation, but it is the distance or error between the line and a particular point. The smaller the residual the better the line is a preditor for that particular point or score. The larger the residual the less predictive the regression line is for that score.</p>
 <p>To evaluate the regression model, the average amount of residual error must be calculated. However, the same problem observed with trying to find the average deviation for a dataset remains here. If you add up all the residuals and try to divide by N, the residuals will add up to zero, which doesn’t help very much. We solve this problem the same way it was solved with deviations, we square them!. This number becomes the sum of squared deviations and is symbolized below: <span class="math display">\[
 SS_R
-\]</span> To decide whether the regression line is a good predictor, something must be used as a comparator. In this case, the mean is compared to the line to see which serves as a better predictor for the data. If the line has a low amount of error (low <span class="math inline">\(SS_R\)</span>) and shows considerable improvement in comparison to the mean (high <span class="math inline">\(SS_M\)</span>), the regression line is a good predictor. Sum of squares model (<span class="math inline">\(SS_M\)</span>) is a measurement of the average distance between the line and the mean. This provides a measurement of the slope or gradient of the line. Remeber that the steeper the slope or gradient of the line the stronger the relationship between two variables. Here the mean, (which is a horizontal line drawn on the Y axis) acts as an estimate of zero relationship or correlation. Thus, the greater the difference between the line and the mean, the greater the relationship or correlation between the variables and the better the predictor variable is at predicting the relationship.</p>
+\]</span> To decide whether the regression line is a good predictor, something must be used as a comparator. In this case, the mean is compared to the line to see which serves as a better predictor for the data. If the line has a low amount of error (low <span class="math inline">\(SS_R\)</span>) and shows considerable improvement in comparison to the mean (high <span class="math inline">\(SS_M\)</span>), the regression line is a good predictor. Sum of squares model (<span class="math inline">\(SS_M\)</span>) is a measurement of the average distance between the line and the mean. This provides a measurement of the slope or gradient of the line. Remember that the steeper the slope or gradient of the line the stronger the relationship between two variables. Here the mean, (which is a horizontal line drawn on the Y axis) acts as an estimate of zero relationship or correlation. Thus, the greater the difference between the line and the mean, the greater the relationship or correlation between the variables and the better the predictor variable is at predicting the relationship.</p>
 <p>There are a few more steps to get to the F value. 1. Each sum of squares must be divided by the degrees of freedom. Think back to finding the standard deviation. We divided the sum of squares by N -1. Sum of squares residual and sum of squares model each have a slightly different degrees of freedom. - k - 1 - N - k 2. Once we’ve divided by the degrees of freedom, we get two numbers, The Means squared model and the Means squared residual. This his how we get to the F value. <span class="math display">\[
 F = \frac {MS_M}{MS_R}
 \]</span> F is a proportional value, so it starts at 1 and is never a negative value. The higher the F value the higher the amount of improvement demonstrated by the regression model in comparison to the residuals (error in the model).</p>
+<p>Of course, we also want to include a scatterplot to show the relationship.</p>
+<pre class="r"><code>ggplot(Album_Sales, mapping = aes(x = Adverts, y = Sales)) +
+         geom_point() +
+        geom_smooth(method = &#39;lm&#39;)</code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+<p><img src="Regression_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p>Finally, the results section should be properly formatted. Here is a good example:</p>
+<blockquote>
+<p>The regression model does appear to be significant. Advertising budget is a good predictor of sales based on the ANOVA test, <em>F (1/98)</em>= 99.59, <em>p</em> &lt; .001. Based on the <span class="math inline">\(R^2\)</span> value of .33, 33% of the sales variable can be explained by the advertising budget.</p>
+</blockquote>
+</div>
 
 
 
